--- a/src/layout/_templates.scss
+++ b/src/layout/_templates.scss
@@ -13,6 +13,9 @@ body {
 	margin: 0 auto;
 	width: 1140px;
 }
+.hidden {
+	display: none !important;
+}
 //
 //@media (max-width: 576px) {
 //	.container {
